--- a/hw1/assets/css/styles.css
+++ b/hw1/assets/css/styles.css
@@ -61,52 +61,52 @@ body {
   height: var(--grid-height);
 }
 
-.company-culture__item:nth-child(1) {
+.company-culture__item--main {
   grid-column: 1 / 3;
   grid-row: 1 / 3;
 }
 
-.company-culture__item:nth-child(2) {
+.company-culture__item--large {
   grid-column: 3 / 5;
   grid-row: 1 / 3;
 }
 
-.company-culture__item:nth-child(3) {
+.company-culture__item--smile {
   grid-column: 5 / 6;
   grid-row: 1 / 2;
 }
 
-.company-culture__item:nth-child(4) {
+.company-culture__item--flower {
   grid-column: 6 / 7;
   grid-row: 1 / 2;
 }
 
-.company-culture__item:nth-child(5) {
+.company-culture__item--text {
   grid-column: 1 / 3;
   grid-row: 3 / 4;
 }
 
-.company-culture__item:nth-child(6) {
+.company-culture__item--coffee {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
 }
 
-.company-culture__item:nth-child(7) {
+.company-culture__item--beige {
   grid-column: 4 / 5;
   grid-row: 3 / 4;
 }
 
-.company-culture__item:nth-child(8) {
+.company-culture__item--door {
   grid-column: 5 / 6;
   grid-row: 2 / 4;
 }
 
-.company-culture__item:nth-child(9) {
+.company-culture__item--red {
   grid-column: 6 / 7;
   grid-row: 2 / 3;
 }
 
-.company-culture__item:nth-child(10) {
+.company-culture__item--silence {
   grid-column: 6 / 7;
   grid-row: 3 / 4;
 }
@@ -205,36 +205,36 @@ body {
     height: auto;
   }
   
-  .company-culture__item:nth-child(1) { 
+  .company-culture__item--main{ 
     grid-column: 1 / 3; 
     grid-row: 1 / 2; 
   }
-  .company-culture__item:nth-child(2) { 
+  .company-culture__item--large { 
     grid-column: 3 / 4; 
     grid-row: 1 / 2; 
   }
-  .company-culture__item:nth-child(3) { 
+  .company-culture__item--smile { 
     grid-column: 1 / 2; 
     grid-row: 2 / 3; 
   }
-  .company-culture__item:nth-child(4) { 
+  .company-culture__item--flower { 
     grid-column: 2 / 3; 
     grid-row: 2 / 3; 
   }
-  .company-culture__item:nth-child(5) { 
+  .company-culture__item--text { 
     grid-column: 3 / 4; 
     grid-row: 2 / 3; 
   }
-  .company-culture__item:nth-child(6) { 
+  .company-culture__item--coffee { 
     grid-column: 1 / 2; 
     grid-row: 3 / 4; 
   }
-  .company-culture__item:nth-child(8) { 
+  .company-culture__item--door { 
     grid-column: 2 / 3; 
     grid-row: 3 / 4; 
   }
 
-  .company-culture__item:nth-child(10) { 
+  .company-culture__item--silence { 
     grid-column: 3 / 4; 
     grid-row: 3 / 4; 
   }
@@ -286,37 +286,37 @@ body {
     grid-template-rows: 150px 380px 380px 380px 380px;
   }
 
-  .company-culture__item:nth-child(1) { 
+  .company-culture__item--main { 
     grid-column: 1 / 3; 
     grid-row: 1 / 2; 
   }
-  .company-culture__item:nth-child(2) { 
+  .company-culture__item--large { 
     grid-column: 1 / 2; 
     grid-row: 2 / 3; 
   }
-  .company-culture__item:nth-child(3) { 
+  .company-culture__item--smile { 
     grid-column: 2 / 3; 
     grid-row: 2 / 3; 
   }
-  .company-culture__item:nth-child(4) { 
+  .company-culture__item--flower { 
     grid-column: 1 / 2; 
     grid-row: 3 / 4; 
   }
-  .company-culture__item:nth-child(5) { 
+  .company-culture__item--text { 
     grid-column: 2 / 3; 
     grid-row: 3 / 4; 
   }
-  .company-culture__item:nth-child(6) { 
+  .company-culture__item--coffee { 
     grid-column: 1 / 2; 
     grid-row: 4 / 5; 
   }
 
-  .company-culture__item:nth-child(8) { 
+  .company-culture__item--door { 
     grid-column: 2 / 3;
     grid-row: 4 / 5;
   }
 
-  .company-culture__item:nth-child(10) { 
+  .company-culture__item--silence { 
     grid-column: 1 / 3; 
     grid-row: 5 / 6; 
   }
@@ -366,16 +366,16 @@ body {
     max-height: 420px;
   }
   
-  .company-culture__item:nth-child(1) { grid-row: 1 / 2; }
-  .company-culture__item:nth-child(2) { grid-row: 2 / 3; }
-  .company-culture__item:nth-child(3) { grid-row: 3 / 4; }
-  .company-culture__item:nth-child(4) { grid-row: 4 / 5; }
-  .company-culture__item:nth-child(5) { grid-row: 5 / 6; }
-  .company-culture__item:nth-child(6) { grid-row: 6 / 7; }
-  .company-culture__item:nth-child(7) { grid-row: 7 / 8; }
-  .company-culture__item:nth-child(8) { grid-row: 8 / 9; }
-  .company-culture__item:nth-child(9) { grid-row: 9 / 10; }
-  .company-culture__item:nth-child(10) { grid-row: 10 / 11; }
+  .company-culture__item--main { grid-row: 1 / 2; }
+  .company-culture__item--large { grid-row: 2 / 3; }
+  .company-culture__item--smile { grid-row: 3 / 4; }
+  .company-culture__item--flower { grid-row: 4 / 5; }
+  .company-culture__item--text { grid-row: 5 / 6; }
+  .company-culture__item--coffee { grid-row: 6 / 7; }
+  .company-culture__item--beige { grid-row: 7 / 8; }
+  .company-culture__item--door { grid-row: 8 / 9; }
+  .company-culture__item--red { grid-row: 9 / 10; }
+  .company-culture__item--silence { grid-row: 10 / 11; }
   
   .company-culture__title {
     font-size: 24px;
